# swarm-agent-lab

./: .gitattributes  .gitignore  ADVANTAGES.md  CONTRIBUTING.md  CYCLES.md  DATA.md  MODULES.md  README.md  REPORT.md  ROADMAP.md  SUBSTANTIAL.md  learn.py  optimization_log.md  pyproject.toml
.claude/agents/: madobi.md
.github/workflows/: ci.yml
assets/: make_logo.py
docs/: STUDY_RECRUIT.md  USAGE.md
docs/demo/: cohort_heatmap.html  dashboard.html  performance_report.md
marketing/: STRATEGY.md  analyze_creatives.py  creative_gen.py  demo_e2e.py  event_analysis.py  loop_report.py  reconcile.py  report.py  safemath.py  sample_baskets.csv  sample_cohorts.csv  sample_geo.csv  sample_landscape.csv  sample_mmm.csv  sample_paths.csv  sample_pq.csv  sample_retention.csv  sample_timeseries.csv  sample_tx.csv  semantic_layer.py  sql_query.py
marketing/bench/: reasoning3.py  summarize.py
marketing/knowledge/: _GLOBAL.md  _fm_preserve.py  build_kb5.py  build_kb_all.py  curate.py  demo_ecommerce.md  glossary.md  link_related.py  recall.py  search.py  viz.py
marketing/pm/: TOOLS.md  _pmutil.py  abtest.py  account_health.py  alert_digest.py  anomaly_ts.py  anova.py  attribution_compare.py  attribution_mta.py  bandit_policy.py  bid_sim.py  brand_split.py  budget_optimizer.py  budget_response_alloc.py  channel_mix.py  chi_square.py  churn_score.py  cluster_terms.py  cohort.py  cohort_heatmap.py  confidence_interval.py  conversion_lag.py  correlation.py  cpm_trend.py  ctr_benchmark.py  dashboard.py  funnel.py  (+45 more)
research/: README.md  make_eval_script.py
tests/: run_all.py
(+217 files in other folders)
